--- a/coroutines-codelab/build.gradle
+++ b/coroutines-codelab/build.gradle
@@ -20,7 +20,7 @@ buildscript {
     ext {
 
         // global variables
-        kotlin_version = '1.3.61'
+        kotlin_version = '1.3.72'
 
         // local variables (use def)
         def androidx_test_version = '1.2.0'
@@ -29,15 +29,17 @@ buildscript {
         def coroutines_android_version = '1.3.2'
         def expresso_version = '3.2.0'
         def gson_version = '2.8.6'
-        def junit_version = '4.12'
-        def lifecycle_version = '2.1.0'
-        def livedata_version = '2.2.0-rc02'
-        def material_version = '1.0.0'
-        def retrofit_gson_version = '2.6.2'
-        def retrofit_version = '2.6.2'
-        def truth_version = '1.0'
-        def room_version = '2.2.2'
-        def work_version = '2.2.0'
+        def junit_version = '4.13'
+        def lifecycle_version = '2.2.0'
+        def arch_version = "2.1.0"
+
+        def livedata_version = '2.3.0-alpha05'
+        def material_version = '1.1.0'
+        def retrofit_gson_version = '2.9.0'
+        def retrofit_version = '2.9.0'
+        def truth_version = '1.0.1'
+        def room_version = '2.2.5'
+        def work_version = '2.3.4'
 
         libraries = [
                 // Kotlin standard library
@@ -78,31 +80,25 @@ buildscript {
 
         testLibraries = [
                 "junit:junit:$junit_version",
-
                 // Coroutines testing
                 "org.jetbrains.kotlinx:kotlinx-coroutines-test:$coroutines_android_version",
-
                 // mocks
                 "org.mockito:mockito-core:2.23.0",
-
                 //  Architecture Components testing libraries
-                "androidx.arch.core:core-testing:$lifecycle_version"
+                "androidx.arch.core:core-testing:$arch_version"
         ]
 
         androidTestLibraries = [
                 "junit:junit:$junit_version",
                 "androidx.test:runner:$androidx_test_version",
                 "androidx.test:rules:$androidx_test_version",
-
                 // Espresso
                 "androidx.test.espresso:espresso-core:$expresso_version",
                 "androidx.test.espresso:espresso-contrib:$expresso_version",
                 "androidx.test.espresso:espresso-intents:$expresso_version",
-
                 //  Architecture Components testing libraries
-                "androidx.arch.core:core-testing:$lifecycle_version",
+                "androidx.arch.core:core-testing:$arch_version",
                 "androidx.work:work-testing:$work_version",
-
                 // Coroutines testing
                 "org.jetbrains.kotlinx:kotlinx-coroutines-test:$coroutines_android_version",
         ]
